# Symbolix

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
src/AST/: .gitignore  AST.h  Makefile.am  config.h  config.h.in
src/AST/Exception/: .gitignore  DivisionByZeroException.C  DivisionByZeroException.h  Exceptions.h  InvalidExpressionException.C  InvalidExpressionException.h  InvalidFunctionParametersException.C  InvalidFunctionParametersException.h  UnknownIdentifierException.C  UnknownIdentifierException.h
src/AST/Expression/: Expression.C  Expression.h  ExpressionList.C  ExpressionList.h  Number.C  Number.h  Text.C  Text.h  Variable.C  Variable.h
src/AST/Expression/FunctionCall/: ArCosh.C  ArCosh.h  ArSinh.C  ArSinh.h  ArTanh.C  ArTanh.h  ArcCos.C  ArcCos.h  ArcSin.C  ArcSin.h  ArcTan.C  ArcTan.h  BasicFunctions.h  Cos.C  Cos.h  Cosh.C  Cosh.h  Cot.C  Cot.h  Exp.C  Exp.h  FunctionByIdentifier.C  FunctionByIdentifier.h  FunctionCall.C  FunctionCall.h  FunctionFactory.C  FunctionFactory.h  Ln.C  Ln.h  Sin.C  Sin.h  Sinh.C  Sinh.h  Sqrt.C  Sqrt.h  Tan.C  Tan.h  Tanh.C  Tanh.h
src/AST/Visitor/: GetDerivativeVisitor.C  GetDerivativeVisitor.h  GetResultVisitor.C  GetResultVisitor.h  Scope.C  Scope.h  SimplifyVisitor.C  SimplifyVisitor.h  StringifyVisitor.C  StringifyVisitor.h  Visitor.C  Visitor.h
src/parser/: .gitignore  Formula.C  Formula.h  FormulaException.C  FormulaException.h  Makefile.am  symbolix-driver.C  symbolix-driver.h  symbolix-parser.yy  symbolix-scanner.ll
src/tests/: .gitignore  Makefile.am  differentiate.C  test.C
(+16 files in other folders)
